1. Метод .of [#326317]