@@ -11,24 +11,24 @@ import static org.junit.Assert.*;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortAsc() {
-        List<String> input = Arrays.asList("k1", "k2", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2");
+        List<String> input = List.of("k1", "k2", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -36,8 +36,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList("k1", "k2", "k1/sk1", "k2/sk1", "k2/sk2");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk2", "k1", "k1/sk1");
+        List<String> input = List.of("k1", "k2", "k1/sk1", "k2/sk1", "k2/sk2");
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk2", "k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
